k8s/calico/globalnetworkpolicy/010-ingress-dos-mitigation.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: ingress-dos-mitigation
spec:
  order: 10
  selector: has(kubernetes-host)
  preDNAT: true
  applyOnForward: true
  ingress:
  # Deny traffic as early as possible
  - action: Deny
    source:
      selector: dos-deny-list == 'true'
