k8s/calico/globalnetworkpolicy/100-ingress-nodeports.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: ingress-nodeports
spec:
  order: 100
  selector: has(kubernetes-host)
  preDNAT: true
  applyOnForward: true
  ingress:
  # Allow traffic to NodePorts (TCP) from trusted clients
  - action: Allow
    protocol: TCP
    source:
      selector: trusted-clients == 'true'
    destination:
      selector: has(kubernetes-host)
      ports:
      - "30000:32767"
  # Allow traffic to NodePorts (UDP) from trusted clients
  - action: Allow
    protocol: UDP
    source:
      selector: trusted-clients == 'true'
    destination:
      selector: has(kubernetes-host)
      ports:
      - "30000:32767"
  # Deny traffic to NodePorts (TCP)
  - action: Deny
    protocol: TCP
    destination:
      selector: has(kubernetes-host)
      ports:
      - "30000:32767"
  # Deny traffic to NodePorts (UDP)
  - action: Deny
    protocol: UDP
    destination:
      selector: has(kubernetes-host)
      ports:
      - "30000:32767"
